Reconfigured Project Files

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>DataFixerUppperExamples</name>
+	<name>DataFixerUpperExamples</name>
 	<comment>Project DataFixerUppperExamples created by Buildship.</comment>
 	<projects>
 	</projects>
