--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,10 @@ repositories {
     // Use jcenter for resolving dependencies.
     // You can declare any Maven/Ivy/file repository here.
     jcenter()
+    
+    maven {
+    	url "https://libraries.minecraft.net"
+	}
 }
 
 dependencies {
@@ -26,4 +30,10 @@ dependencies {
 
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
+    
+    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.13.0'
+  	compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.13.0'
+  	
+  	// DataFixerUpper Repository
+  	compile 'com.mojang:datafixerupper:1.0.20'
 }
