--- a/build.gradle
+++ b/build.gradle
@@ -41,3 +41,4 @@ dependencies {
 apply plugin: 'application'
 
 mainClassName = "DataFixerUpperExamples.Main"
+applicationDefaultJvmArgs = ["-Dlog4j.configurationFile=log4j2.xml"]
